2010-06-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectFileCollection.cs: Use FilePath
	  when comparing files, since it will is case insensitive on
	  windows. Sould fix bug #567155 - Linked source files not
	  saved before building.

2010-06-28  Lluis Sanchez Gual  <lluis@novell.com>

	* frameworks/framework_NET_4_0.xml: Add missing assembly.

2010-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Serialization/DataContext.cs: Properly
	  register extended properties. Fixes bug #Bug 615523 -
	  [regression] tarball packages lack pixmaps / desktop files.

2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Core.csproj:
	* MonoDevelop.Core.Assemblies/TargetRuntime.cs:
	* MonoDevelop.Core.Execution/ExecutionEnvironment.cs:
	* MonoDevelop.Core.Assemblies/TargetFrameworkBackend.cs:
	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectService.cs:
	  Added ExecutionEnvironment class, which can be used to
	  customize the environment of a process.

2010-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/Project.cs: Use a monitor task for the
	  build so things get indented properly in the build output
	  pad.

2010-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.CodeGeneration/CodeGenerator.cs: Use
	  start & end offset for regions, not start + length.

2010-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.CodeGeneration/CodeGenerator.cs:
	  CreateMemberImplementation now returns a
	  CodeGeneratorMemberResult with body regions.

	* MonoDevelop.Projects.Dom/IDomVisitor.cs:
	* MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs: Fix
	  spelling.

2010-06-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: Added option for
	  setting a project to use an external console.

2010-06-03  Mike Krüger  <mkrueger@novell.com>
